Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Sep-2009 Andrew Eddie
+ Added JControllerForm (to support basic edit operations).
+ Added table jos_languages.
+ Added support to add and edit content languages.

26-Sep-2009 Andrew Eddie
^ Install from directory now remembers previous path.
^ Refactored language installation error messages.
^ Forced language installation file to require client attribute.
^ Refactored System Debug language strings.
+ New options in System Debug plugin to more tightly control how the untranslated string present

25-Sep-2009 Mark Dexter
# Add extension to new Category in Content->Category Manager

23-Sep-2009 Hannes Papenberg
^ Added class and ID to radio buttons

21-Sep-2009 Mark Dexter
^ Merge from dextercowley branch
^ Layouts for frontend components
^ Make com_contact MVC
^ Fix a number of issues in in com_menus
^ Fix problem in administrator menu
^ Update strings

21-Sep-2009 Ron Severdia
# BlueStork CSS fixes
+ New icons
$ Language fixes
^ Replace tables in components

20-Sep-2009 Ron Severdia
# BlueStork CSS fixes
# Fixed submenu switcher
# Visual cleanup

20-Sep-2009 Hannes Papenberg
 ^ Removed static insert for com_redirect. its now properly retrieved from the database.
 # Fixed path to the form file for com_redirect

18-Sep-2009 Hannes Papenberg
 ^ changed some functions to be static to adhere to PHP5 strict
 ^ fixed some output to fix a false warning in Eclipse
 # Fixed missing class in radio buttons in JForms

18-Sep-2009 Andrew Eddie
 # Installation application: Fix untranslated strings; cleanup missing string; add HTML helper for stepbar; namespace language and preinstall layouts.
 # Fixed spurious PHP errors on menu item edit page.
 + Added JTableAsset
 + Added check to JTableNested to ensure that parent node exists in the tree.